--- a/styles.css
+++ b/styles.css
@@ -41,9 +41,9 @@ h3 {
 }
 
 /* HEADER STYLES */
-/* header {
-  padding: 1.5rem;
-} */
+header {
+  margin-bottom: 2rem;
+}
 
 .logo-container {
   display: flex;
@@ -62,6 +62,8 @@ h3 {
   max-width: 200px;
   max-height: 200px;
 }
+
+/* NAV */
 nav {
   max-width: 80%;
   margin: 0 auto;
@@ -70,11 +72,12 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   gap: 3rem;
   padding: 1rem;
   background-color: var(--jasper);
   color: var(--champagne-pink);
+  border-radius: 5px;
 }
 
 .nav-items-container li {
@@ -89,4 +92,56 @@ nav {
 }
 .nav-items-container a:hover {
   color: var(--dark-purple);
+}
+
+/* MAIN STYLES */
+.promotion {
+  position: relative;
+  height: 300px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* pseudo element added to allow for opacity on background image */
+.promotion::before {
+  content: '';
+  background-image: url('./images/adam-winger-KVVjmb3IIL8-unsplash.jpg');
+  background-size: 100%;
+  background-position: bottom -200px right 60%;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  opacity: 0.4;
+}
+
+h1 {
+  position: relative;
+  color: var(--jasper);
+  font-size: 4rem;
+  text-align: center;
+  letter-spacing: 3px;
+}
+
+@media (max-width: 500px) {
+  /* header */
+  .nav-items-container {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  h1 {
+    font-size: 2rem;
+  }
+  .promotion::before {
+    background-image: none;
+    opacity: 1;
+  }
+  .promotion {
+    background-color: var(--dark-purple);
+    height: 250px;
+  }
 }
