--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,9 @@ h2,
 h3 {
   font-family: 'Fraunces', serif;
 }
+img {
+  display: block;
+}
 
 /* HEADER STYLES */
 header {
@@ -95,6 +98,8 @@ nav {
 }
 
 /* MAIN STYLES */
+
+/*PROMOTION/HERO  */
 .promotion {
   position: relative;
   height: 300px;
@@ -102,11 +107,12 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 2rem;
 }
 /* pseudo element added to allow for opacity on background image */
 .promotion::before {
   content: '';
-  background-image: url('./images/adam-winger-KVVjmb3IIL8-unsplash.jpg');
+  background-image: url('https://images.unsplash.com/photo-1595475884562-073c30d45670?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80');
   background-size: 100%;
   background-position: bottom -200px right 60%;
   background-repeat: no-repeat;
@@ -124,6 +130,29 @@ h1 {
   font-size: 4rem;
   text-align: center;
   letter-spacing: 3px;
+}
+
+/* INFO SECTION */
+.info-section {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+  width: 90%;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+.info-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.info-container img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 5px;
 }
 
 @media (max-width: 500px) {
