--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,10 @@ h3 {
 img {
   display: block;
 }
+body {
+  max-width: 1800px;
+  margin: 0 auto;
+}
 
 /* HEADER STYLES */
 header {
@@ -147,12 +151,26 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 1rem;
+  background-color: var(--champagne-pink);
 }
 .info-container img {
   width: 100%;
   height: 300px;
   object-fit: cover;
-  border-radius: 5px;
+  border-radius: 5px 5px 0 0;
+}
+.info-container h2 {
+  color: var(--jasper);
+  font-size: 2rem;
+  text-align: center;
+  letter-spacing: 2px;
+}
+.info-container p {
+  color: var(--dark-purple-2);
+  font-size: 1.2rem;
+  line-height: 25px;
+  padding: 0 1.5rem;
 }
 
 @media (max-width: 500px) {
@@ -161,7 +179,7 @@ h1 {
     flex-direction: column;
     gap: 1rem;
   }
-
+  /* PROMOTIONS/HERO */
   h1 {
     font-size: 2rem;
   }
@@ -172,5 +190,18 @@ h1 {
   .promotion {
     background-color: var(--dark-purple);
     height: 250px;
+    padding: 0.5rem;
+  }
+  /* INFO SECTION */
+  .info-section {
+    grid-template-columns: 1fr;
+  }
+
+  .info-container img {
+    height: 200px;
+  }
+  .info-container p {
+    padding: 0 0.8rem;
+    font-size: 1rem;
   }
 }
