--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ html {
   --dark-purple-2: #31081fff;
 }
 
-/* /* GENERAL STYLES */
+/* GENERAL STYLES */
 
 p,
 a,
@@ -69,7 +69,7 @@ header {
   max-height: 200px;
 }
 
-/* NAV */
+/* NAV STYLES */
 nav {
   max-width: 80%;
   margin: 0 auto;
@@ -78,7 +78,6 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* flex-wrap: wrap; */
   gap: 3rem;
   padding: 1rem;
   background-color: var(--jasper);
@@ -100,9 +99,9 @@ nav {
   color: var(--dark-purple);
 }
 
-/* MAIN STYLES */
+/* MAIN SECTION STYLES */
 
-/*PROMOTION/HERO  */
+/*PROMOTION/HERO SECTION */
 .promotion {
   position: relative;
   height: 300px;
@@ -112,6 +111,7 @@ nav {
   justify-content: center;
   margin-bottom: 2rem;
 }
+
 /* pseudo element added to allow for opacity on background image */
 .promotion::before {
   content: '';
@@ -151,11 +151,10 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* gap: 1rem; */
   background-color: var(--champagne-pink);
-
   border-radius: 5px;
 }
+
 .info-container img {
   width: 100%;
   height: 300px;
@@ -163,6 +162,7 @@ h1 {
   border-radius: 5px 5px 0 0;
   margin-bottom: 1rem;
 }
+
 .info-container h2 {
   color: var(--jasper);
   font-size: 2rem;
@@ -170,6 +170,7 @@ h1 {
   letter-spacing: 2px;
   margin-bottom: 1rem;
 }
+
 .info-container p {
   color: var(--dark-purple-2);
   font-size: 1.2rem;
@@ -177,6 +178,7 @@ h1 {
   padding: 0 1.5rem;
   margin-bottom: 2rem;
 }
+
 .info-links {
   background-color: var(--dark-purple);
   color: var(--champagne-pink);
@@ -187,12 +189,13 @@ h1 {
   transition: all 0.3s ease-in-out;
   margin-bottom: 2rem;
 }
+
 .info-links:hover {
   background-color: var(--jasper);
   color: var(--champagne-pink);
 }
 
-/* FOOTER */
+/* FOOTER STYLES */
 footer {
   background-color: var(--dark-purple);
   color: var(--champagne-pink);
@@ -207,13 +210,16 @@ footer {
   align-items: center;
   width: 80%;
   margin: 0 auto;
+  padding: 1rem;
 }
+
 .footer-left {
   display: flex;
   flex-direction: column;
   gap: 2rem;
   flex-basis: 45%;
 }
+
 .footer-right {
   align-self: flex-start;
   flex-basis: 45%;
@@ -229,8 +235,10 @@ footer {
   text-align: end;
 }
 
+/* MOBILE STYLES */
+
 @media (max-width: 800px) {
-  /* header */
+  /* HEADER */
   .nav-items-container {
     flex-direction: column;
     gap: 1rem;
@@ -248,7 +256,9 @@ footer {
     height: 250px;
     padding: 0.5rem;
   }
+
   /* INFO SECTION */
+
   .info-section {
     grid-template-columns: 1fr;
   }
@@ -263,5 +273,6 @@ footer {
   /* FOOTER */
   .footer-flex-container {
     width: 100%;
+    padding: 0.5rem;
   }
 }
